# rust-microcontroller

./: Cargo.toml  build.rs  memory.x  setup-env.sh
.github/workflows/: ci.yml
src/: cli.rs  clock.rs  constants.rs  gpio_api.rs  main.rs
src/clocks/: mod.rs
src/peripherals/gpio/: mod.rs
src/peripherals/uart/: mod.rs  terminal.rs
