[package]
name = "rust-microcontroller"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-hal = "0.2.7"
embedded-time = "0.12.1"
panic-halt = "0.2.0"

# The rp-pico crate provides board support for the Raspberry Pi Pico H
rp-pico = "0.8.0"
rp2040-hal = "0.9.0"

[profile.release]
panic = "abort"