[package]
name = "rust-microcontroller"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
rp2040-pac = { version = "0.6.0", features = ["critical-section"] }
rp2040-hal = "0.10.2"
rp-pico = "0.9.0"
cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
cortex-m = "0.7.7"
interrupt = "0.1.3"
heapless = "0.8"
itoa="1.0"

[profile.release]
panic = "abort"
